@@ -38,9 +38,10 @@ int RDB_parse_tokens[] = {
     TOK_AND, TOK_ALL, TOK_ANY, TOK_AVG, TOK_ARRAY, TOK_AS, TOK_ASC,
     TOK_BEGIN, TOK_BUT, TOK_CALL, TOK_CASE, TOK_CATCH, TOK_COUNT, TOK_COMMIT,
     TOK_CONSTRAINT, TOK_DEFAULT, TOK_DELETE, TOK_DESC, TOK_DIVIDEBY, TOK_DROP,
-    TOK_D_UNION, TOK_ELSE, TOK_END, TOK_EXPLAIN, TOK_EXTEND, TOK_EXTERN, TOK_FOR,
-    TOK_FROM, TOK_GROUP, TOK_IF, TOK_IMPLEMENT, TOK_IN, TOK_INDEX,
-    TOK_INIT, TOK_INSERT, TOK_INTERSECT, TOK_JOIN, TOK_KEY, TOK_LEAVE,
+    TOK_D_INSERT, TOK_D_UNION, TOK_ELSE, TOK_END, TOK_EXPLAIN, TOK_EXTEND,
+    TOK_EXTERN, TOK_FOR, TOK_FROM, TOK_GROUP,
+    TOK_IF, TOK_IMPLEMENT, TOK_IN, TOK_INDEX, TOK_INIT, TOK_INSERT,
+    TOK_INTERSECT, TOK_I_DELETE, TOK_JOIN, TOK_KEY, TOK_LEAVE,
     TOK_LIKE, TOK_LOAD, TOK_MAX, TOK_MATCHING,
     TOK_MIN, TOK_MINUS, TOK_MODULE, TOK_NOT, TOK_OPERATOR, TOK_OR,
     TOK_ORDER, TOK_ORDERED, TOK_PER,
